--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -10,24 +10,9 @@ body {
 
 .page-footer__contacts {
   // contacts
-  // display: block;
+  // position: relative;
 }
 
 .page-footer__links {
   // logo-link
-  // display: block;
-}
-
-.page-footer__logo {
-  // display: block;
-}
-
-.page-footer__social {
-  // social
-  // display: block;
-}
-
-.page-footer__copyright {
-  // copyright
-  // display: block;
 }
