--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,22 +1,24 @@
 // checking sass
 body {
   // background-color: #f8823d;
+  min-width: 320px;
 }
 
 // 320 mobile
-// $xs: <576px;
-$xs-container: 320px;
-$xs-wrapper: 280px;
-// $sm: 576px;
-// $sm-container: 540px;
-// // 768 tablet
-// $md: 768px;
-// $md-container: 720px;
-// $lg: 992px;
-// $lg-container: 960px;
-// // 1300 desktop
-// $xl: 1200px;
-// $xl-container: 1140px;
+$mobile-wrapper: 320px;
+$mobile-padding: 20px;
+
+// 768 tablet
+$tablet-breakpoint: 768px;
+$tablet-wrapper: 768px;
+$tablet-padding: 30px;
+
+// 1300 desktop
+$desktop-breakpoint: 1300px;
+// $desktop-wrapper: 1440px;
+$desktop-wrapper: 1300px;
+$desktop-padding: 40px;
+
 
 // --------------------------
 // basic colors
@@ -25,8 +27,11 @@ $light_font_color: #ffffff;
 $title_font_color: #111111;
 $text_font_color: #444444;
 // background
-$main_grey_color: #f2f2f2;
 $main_green_color: #68b738;
+$main_grey_color: #f2f2f2;
+$green_button_color_hvr: #5eaa2f;
+$grey_button_color_hvr: #ebebeb;
+
 // border
 $border_color: #cdcdcd;
 // --------------------------
@@ -35,35 +40,46 @@ $border_color: #cdcdcd;
 $additional_font_color: #222222;
 // border
 // $additional_border_color: #cdcdcd;
+// TODO проверить border - часть из них
+// TODO $border_color: #cdcdcd;
+//  TODO opacity: 0.5;
+
+// TODO убрать card-border
 $card_border_color: #ededed;
 // --------------------------
-// form
-// border
-$button_order_color_hvr: #5eaa2f;
-$button_show_color_hvr: #ebebeb;
-// $button_show_color: #f2f2f2;
-
 // input
-$additional_font_color: #222222;
 // $input_font_color: #222222;
+$additional_font_color: #222222;
 
-$border_color: #cdcdcd;
 // $input_border_color: #cdcdcd;
+$border_color: #cdcdcd;
 $input_border_color_active: #444444;
 $input_border_color_error: #ff8282;
 
 // checkbox
-$checkbox_border_color: #cdcdcd;
+// $checkbox_border_color: #cdcdcd;
+$border_color: #cdcdcd;
 $checkbox_border_color_hvr: #bababa;
+
 // radiobutton
-$radio_border_color: #cdcdcd;
+// $radio_border_color: #cdcdcd;
+$border_color: #cdcdcd;
 $radio_border_color_hvr: #bababa;
 
 // icon colors
 // index
-$arrow_color: #3e4242;
+// $arrow_color: #3e4242;
 // header
 $menu_icon_color: #222222;
 // footer
-$footer_icon_color: #666666;
+// $footer_icon_color: #666666;
 $footer_icon_color_hvr: #68b738;
+
+
+// @media (min-width: $tablet-breakpoint) {
+//
+// }
+
+// @media (min-width: $desktop-breakpoint) {
+//
+// }
