--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -5,53 +5,74 @@ body {
 
 .advantages {
   // display: block;
-}
+  padding-top: 10px;
+  padding-bottom: 10px;
 
-.advantages__wrapper {
-  // display: block;
+  // border-bottom: 1px solid transparent;
 }
 
 .advantages__title {
-  line-height: 60px;
+  margin-bottom: 20px;
+  // line-height: 60px;
 
   @include font(36px, 400, $title_font_color);
-}
 
-.advantages__list {
-  // display: block;
-}
+  @media (min-width: $tablet-breakpoint) {
+    font-size: 60px;
+  }
 
-.advantages__item {
-  // display: block;
-  width: 176px;
-  margin-bottom: 60px;
-
-  line-height: 18px;
-
-  @include font_arial(14px, 400, $text_font_color);
-
-  // &::before {
-  //   content: "";
-  //   position: absolute;
-  //   left: -80px;
-
-  //   display: inline-block;
-  //   width: 60px;
-  //   height: 60px;
-
-  //   vertical-align: middle;
-
-  //   background-color: $main_green_color;
+  // @media (min-width: $desktop-breakpoint) {
+  //
   // }
 }
 
-.advantages-icon {
+.advantages__list {
+  @media (min-width: $tablet-breakpoint) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  // @media (min-width: $desktop-breakpoint) {
+  //
+  // }
+}
+
+.advantages__item {
   position: relative;
+
+  margin-bottom: 20px;
+  padding: 10px 10px 10px 80px;
+  // line-height: 18px;
+
+  @include font_arial(14px, 400, $text_font_color);
+
+  @media (min-width: $tablet-breakpoint) {
+    flex-basis: 350px;
+    padding: 100px 20px 10px 20px;
+
+    font-size: 16px;
+    // line-height: 24px;
+
+    @media (min-width: $desktop-breakpoint) {
+      flex-basis: 300px;
+    }
+  }
+}
+
+.advantages__icon {
+  position: relative;
+
+  // content: "1";
+  // line-height: 281px;
+  // @include font(281px, 400, $main_grey_color);
 
   &::before {
     content: "";
-    // position: absolute;
-    left: -80px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -2;
 
     display: inline-block;
     width: 60px;
@@ -60,6 +81,15 @@ body {
     vertical-align: middle;
 
     background-color: $main_green_color;
+
+    @media (min-width: $tablet-breakpoint) {
+      width: 80px;
+      height: 80px;
+    }
+
+    // @media (min-width: $desktop-breakpoint) {
+    //
+    // }
   }
 
   &::after {
@@ -67,37 +97,66 @@ body {
     position: absolute;
     top: 15px;
     left: 15px;
+    z-index: -2;
 
     background-repeat: no-repeat;
     background-position: center center;
   }
 }
 
-.advantages-icon--leaf::after {
+.advantages__icon--leaf::after {
   width: 26px;
   height: 29px;
+  // background-size: 100%;
 
   background-image: url("../img/advantage-leaf@1x.png");
-  // background-size: 100%;
+
+  @media (min-width: $tablet-breakpoint) {
+    content: "1";
+    // line-height: 281px;
+
+    @include font(281px, 400, $main_grey_color);
+  }
 }
 
-.advantages-icon--powder::after {
+.advantages__icon--powder::after {
   width: 31px;
   height: 31px;
 
   background-image: url("../img/advantage-powder@1x.png");
+
+  @media (min-width: $tablet-breakpoint) {
+    content: "2";
+    // line-height: 281px;
+
+    @include font(281px, 400, $main_grey_color);
+  }
 }
 
-.advantages-icon--dining::after {
+.advantages__icon--dining::after {
   width: 23px;
   height: 30px;
 
   background-image: url("../img/advantage-dining@1x.png");
+
+  @media (min-width: $tablet-breakpoint) {
+    content: "3";
+    // line-height: 281px;
+
+    @include font(281px, 400, $main_grey_color);
+  }
 }
 
-.advantages-icon--clock::after {
+.advantages__icon--clock::after {
   width: 26px;
   height: 31px;
 
   background-image: url("../img/advantage-clock@1x.png");
+
+  @media (min-width: $tablet-breakpoint) {
+    content: "4";
+    // line-height: 281px;
+
+    @include font(281px, 400, $main_grey_color);
+  }
 }
