--- a/source/sass/blocks/banner.scss
+++ b/source/sass/blocks/banner.scss
@@ -4,20 +4,40 @@ body {
 }
 
 .banner {
-  // display: block;
-  padding: 100px 0 100px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 280px;
+  height: 289px;
+  padding: 50px 50px 50px 50px;
 
   background-image: url("../img/gift-photo-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: contain;
 
+  @media (min-width: $tablet-breakpoint) {
+    flex-direction: row;
+    width: 708px;
+    height: 200px;
+
+    background-image: url("../img/gift-photo-tablet@1x.jpg");
+  }
+
+  @media (min-width: $desktop-breakpoint) {
+    flex-direction: column;
+    width: 245px;
+    height: 289px;
+
+    background-image: url("../img/gift-photo-desktop@1x.jpg");
+  }
+
   &::before {
     content: "";
 
     display: block;
     width: 55px;
-    height: 65px;
+    height: 60px;
     margin: auto;
 
     background-image: url("../img/icon-gift.svg");
@@ -28,8 +48,16 @@ body {
 }
 
 .banner__text {
-  // display: block;
-  line-height: 20px;
+  // line-height: 20px;
+  text-align: center;
 
   @include font_arial(16px, 400, $light_font_color);
+
+  @media (min-width: $tablet-breakpoint) {
+    text-align: left;
+  }
+
+  @media (min-width: $desktop-breakpoint) {
+    text-align: center;
+  }
 }
