--- a/source/sass/blocks/keypoints.scss
+++ b/source/sass/blocks/keypoints.scss
@@ -4,40 +4,82 @@ body {
 }
 
 .keypoints {
-  // display: block;
-}
-
-.keypoints__value {
-  // Text: 5 кг
-  line-height: 24px;
-  text-transform: uppercase;
-
-  @include font(24px, 400, $title_font_color);
-}
-
-.keypoints__option {
-  // Text: снижение веса
-  line-height: 12px;
-
-  @include font(12px, 400, $text_font_color);
-}
-
-.keypoints__value-option {
-  line-height: 14px;
-  text-transform: uppercase;
-
-  @include font(14px, 400, $title_font_color);
-}
-
-.keypoints__wrapper {
-  // display: block;
+  //
 }
 
 .keypoints__item {
-  // display: block;
+  // TODO убрать обводку
+  outline: 1px solid rgb(24, 187, 228);
+}
+
+.keypoints__item--weight,
+.keypoints__item--time-spent {
+  .keypoints__value,
+  .keypoints__option {
+    text-align: center;
+    text-transform: uppercase;
+  }
+
+  .keypoints__value {
+    // Text: 5 кг
+    // line-height: 24px;
+    display: block;
+
+    @include font(24px, 400, $title_font_color);
+
+    @media (min-width: $tablet-breakpoint) {
+      font-size: 30px;
+    }
+  }
+
+  .keypoints__option {
+    // display: block;
+    // Text: снижение веса
+    // line-height: 12px;
+    @include font(12px, 400, $text_font_color);
+
+    @media (min-width: $tablet-breakpoint) {
+      font-size: 14px;
+    }
+  }
+}
+
+.keypoints__item--food-cost {
+  .keypoints__value,
+  .keypoints__option {
+    // Text: Затраты на питание: 15 000 руб.
+    // display: inline-block;
+    vertical-align: top;
+    // line-height: 14px;
+    text-transform: uppercase;
+
+    @include font(14px, 400, $title_font_color);
+
+    @media (min-width: $tablet-breakpoint) {
+      font-size: 20px;
+    }
+  }
+}
+
+.keypoints__item--grow {
+  flex-grow: 1;
 }
 
 .keypoints__item--border {
-  border: 1px solid $border_color;
+  // TODO править flex-basis
+  flex-basis: 100px;
+  // border: 1px solid $border_color;
+  // TODO установить нормальный border
+
+  border: 4px solid rgb(112, 112, 112);
   border-radius: 3px;
+
+
+  @media (min-width: $tablet-breakpoint) {
+    flex-basis: 200px;
+  }
+
+  @media (min-width: $desktop-breakpoint) {
+    flex-basis: 300px;
+  }
 }
