--- a/source/sass/blocks/products-proposal.scss
+++ b/source/sass/blocks/products-proposal.scss
@@ -5,17 +5,15 @@ body {
 
 
 .products-proposal {
-  // display: block;
-  // position: relative;
+  display: flex;
+  flex-direction: column;
+  // align-items: center;
   padding: 25px 0 25px 0;
 
   border: 1px solid $card_border_color;
 
   &::before {
     content: "";
-    // position: absolute;
-    // top: 10px;
-    // left: 50%;
 
     display: block;
     width: 30px;
@@ -25,34 +23,50 @@ body {
     background-image: url("../img/icon-plus-mobile.svg");
     background-position: center center;
     background-size: contain;
+    // position: absolute;
+    // top: 10px;
+    // left: 50%;
+    opacity: 0.2;
+
+    @media (min-width: $tablet-breakpoint) {
+      width: 60px;
+      height: 60px;
+
+      background-image: url("../img/icon-plus.svg");
+    }
+
+    // @media (min-width: $desktop-breakpoint) {
+    //
+    // }
   }
 }
 
-.products-proposal__title {
-  // display: block;
-  line-height: 20px;
-  text-transform: uppercase;
-
-  @include font(16px, 400, $title_font_color);
-}
-
-.products-proposal__subtitle {
-  // display: block;
-  line-height: 16px;
-
-  @include font_arial (12px, 400, $text_font_color);
-}
-
 .products-proposal__button {
-  display: block;
-  width: 100%;
+  // Text: Показать все
+  // line-height: 20px;
+  // line-height: 16px;
+  // @include font(16px, 400, $text_font_color);
 
-  line-height: 20px;
-  text-align: center;
-  text-transform: uppercase;
 
-  background-color: $main_grey_color;
-  border: none;
+  // @media (min-width: $tablet-breakpoint) {
+  //
+  // }
 
-  @include font (16px, 400, $text_font_color);
+  // @media (min-width: $desktop-breakpoint) {
+  //
+  // }
+
+
+  // width: 280px
+  // height: 40px;
+  // ==================== tab
+  // font-size: 16px;
+  // line-height: 20px;
+  // width: 249px
+  // height: 40px;
+  // ==================== desctop
+  // font-size: 16px;
+  // line-height: 20px;
+  // width: 169px
+  // height: 40px;
 }
